a bit more stuff

--- a/src/layouts/pt-system.html
+++ b/src/layouts/pt-system.html
@@ -21,22 +21,20 @@
 							<spacer size="10"></spacer>
 							<row>
 								<columns>
-									<p class="text-center touble-viewing">Having trouble viewing? <a href="#"><strong>click here</strong></a> to view it online</p>
+									<p class="text-center touble-viewing">Having trouble viewing? <a href="https://www.propertytycoon.com/view-online/123"><strong>click here</strong></a> to view it online</p>
 									<center>
-										<img src="assets/img/email-header.jpg" />
+										<img src="https://s3-ap-southeast-2.amazonaws.com/property-tycoon/email-header.jpg" />
 									</center>
 								</columns>
 							</row>
 						</container>
-						<container class="body">
+						<container class="main-content">
 							<row>
-								<columns></columns>
-								<columns large="10">
+								<columns>
 									<spacer size="32"></spacer>
 									{{!-- Pages you create in the src/pages/ folder are inserted here when the flattened emails are created. --}}
 									{{> body}}
 								</columns>
-								<columns></columns>
 							</row>
 							<spacer size="16"></spacer>
 						</container>
@@ -51,24 +49,24 @@
 								<columns></columns>
 								<columns large="1">
 									<center>	
-										<a href="#"><img src="assets/img/social-fb.png" /></a>
-									</center>	
-								</columns large="1">
-								 <columns>
-									<center>	
-										<a href="#"><img src="assets/img/social-instagram.png" /></a>
+										<a href="https://www.facebook.com"><img src="https://s3-ap-southeast-2.amazonaws.com/property-tycoon/social-fb.png" /></a>
 									</center>	
 								</columns>
 								<columns large="1">
 									<center>	
-										<a href="#"><img src="assets/img/social-twitter.png" /></a>
+										<a href="https://www.instagram.com"><img src="https://s3-ap-southeast-2.amazonaws.com/property-tycoon/social-instagram.png" /></a>
+									</center>	
+								</columns>
+								<columns large="1">
+									<center>	
+										<a href="https://twitter.com"><img src="https://s3-ap-southeast-2.amazonaws.com/property-tycoon/social-twitter.png" /></a>
 									</center>	
 								</columns>
 								<columns></columns>
 							</row>
 							<row>
 								<columns>
-									<p class="text-center">You're receiving this email because you signed up to receive email updates on Property Tycoon. If you'd prefer not to receive updates, you can <a href="#">unsubscribe</a>.</p>
+									<p class="text-center">You're receiving this email because you signed up to receive email updates on Property Tycoon. If you'd prefer not to receive updates, you can <a href="https://www.propertytycoon.com/unsubscribe">unsubscribe</a>.</p>
 								</columns>
 							</row>
 							<row>
