--- a/src/assets/scss/property-tycoon/_main.scss
+++ b/src/assets/scss/property-tycoon/_main.scss
@@ -8,7 +8,6 @@
 	}
 	a {
 		color: #7b7c87;
-
 	}
 }
 
@@ -19,7 +18,7 @@
 	}
 }
 
-.container.body {
+.container.main-content {
 	hr {
 		border-bottom: 1px solid #f0f0f0;
 	}
